2006-12-09  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java: Remove unneded import.
	* kawa/lang/PairPat.java: Likewise.
	* kawa/lang/ListRepeatPat.java: Likewise.
	* kawa/lang/VarListPat.java: Likewise.
	* kawa/repl.java: Remove unused local variables.

	* build.xml: Update handling of XMLParser.java to match that of make.

2006-12-06  Per Bothner  <per@bothner.com>

	* kawa/standard/object.java (rewriteForm, scanClassDef): Handle
	SyntaxForm in member definition.

2006-12-05  Per Bothner  <per@bothner.com>

	* configure.in: Make --with-sax the default.

	* Makefile.am (dist-kawa-@VERSION@.jar): Fix various bitrot.

	* kawa/repl.java: Update copyright year printed by --version to 2007.

	* Makefile.am (kawa/Version.java): Use svnversion command.

	* Makefile.am (selected-java-source): Handle JAVA_SOURCE = 6.

2006-12-04  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java: Update for require.importDefinitions.
	* kawa/Shell.java (run): Update for Language.run changes.
	* kawa/standard/require.java (importDefinitions): Some refactoring so
	we can pass the ModuleInfo from XQParser so we use the same info
	without trying to load the wrong file.  Combine two methods to one.
	(lookupModuleFromSourcePath): New static helper method.

	* kawa/repl.java (compilationDirectory): Removed static field, replaced
	by non-static field in ModuleManager.
	(processArgs): Use ModuleManager's new setCompilationDirectory method.

	* kawa/standard/load.java (pply): Don't temporarily setBaseUri.

	* Makefile.am (patch-source-list): Change pattern so we catch
	files that only use #ifndef and not #ifdef,

	* configure.in (WITH_XQTS): Previous change not quite right.

2006-12-02  Per Bothner  <per@bothner.com>

	* configure.in (WITH_XQTS): Default to false.

2006-12-01  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.8.91.
	* build.xml (version.release): Likewise.

	* configure.in: Add support for JAVA_SOURCE=6.