@@ -1,3 +1,8 @@
+2006-12-11  Per Bothner  <per@bothner.com>
+	    Margus Freudenthal <margus@cyber.ee>
+
+	* mac-test.scm: New test for Savannah bug #18504.
+
 2006-12-06  Per Bothner  <per@bothner.com>
 
 	* MySAXApp.expected: Fix expected output.
