@@ -1,3 +1,8 @@
+2006-12-11  Per Bothner  <per@bothner.com>
+
+	* kawa/standard/object.java (scanClassDef, rewriteForm): Handle
+	SyntaxForm around keywords.  Fixes Savannah bug #18504.
+
 2006-12-09  Per Bothner  <per@bothner.com>
 
 	* kawa/lang/CompileFile.java: Remove unneded import.
